fix for playsms

--- a/kannel.sample.conf
+++ b/kannel.sample.conf
@@ -52,18 +52,24 @@ modemtype = huawei
 device = /dev/ttyUSB0
 speed = 115200
 my-number = +234xxxxxxxxxx
+allowed-prefix = "+234;234;0"
+unified-prefix = "+234,234,0;+,00"
 sim-buffering=true
 validityperiod=167
+sim-buffering = true
+max-error-count = 5
 log-level = 0
 
 
 group = modems
 id = huawei
 name = huawei
+message-storage = SM
+need-sleep = true
+sendline-sleep = 200
 detect-string = "huawei"
 enable-mms = true
 init-string = "AT+CNMI=2,1,0,0,0;+CMEE=1"
-need-sleep = true
 
 #---------------------------------------------
 # SMSBOX SETUP
@@ -79,8 +85,8 @@ need-sleep = true
 
 group = smsbox
 bearerbox-host = bearerbox
-sendsms-port = 13013
-global-sender = 13013
+sendsms-port = 13131
+global-sender = 13131
 sendsms-chars = "0123456789 +-"
 log-file = "/var/log/kannel/smsbox.log"
 log-level = 0
