fix playsms to kannel comm

--- a/kannel/kannel.sample.conf
+++ b/kannel/kannel.sample.conf
@@ -137,4 +137,4 @@ concatenation = true
 catch-all = true
 omit-empty = true
 accepted-smsc = huawei
-get-url = "http://playsms/index.php?app=call&cat=gateway&plugin=kannel&access=geturl&t=%t&q=%q&a=%a&Q=%Q&smsc=%i"
+get-url = "http://nginx/index.php?app=call&cat=gateway&plugin=kannel&access=geturl&t=%t&q=%q&a=%a&Q=%Q&smsc=%i"
