make playsms data local

--- a/.env.example
+++ b/.env.example
@@ -29,5 +29,6 @@ PATHLOG=/var/www/data/log
 PATHSTR=/var/www/data/str
 PATHSRC=/var/www/data/src
 PLAYSMS_WEB=/var/www/html
+PLAYSMS_DATA="./.docker/playsms"
 
 XDEBUG_CONFIG=client_host=172.17.0.1 client_port=9003 start_with_request=yes
