--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,11 @@
-version: '3'
+version: '3.9'
 
 services:
   bearerbox:
     container_name: bearerbox
     hostname: bearerbox
     image: ghcr.io/gpproton/kannel:${VERSION}
+    pull_policy: missing
     build:
       context: ./kannel
       dockerfile: Dockerfile
@@ -20,6 +21,7 @@ services:
     container_name: smsbox
     hostname: smsbox
     image: ghcr.io/gpproton/kannel:${VERSION}
+    pull_policy: missing
     build:
       context: ./kannel
       dockerfile: Dockerfile
