--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 DOCKER_BUILDKIT=1
 COMPOSE_DOCKER_CLI_BUILD=1
 
-VERSION="1.4.6"
-VERSION_PLAYSMS=1.4.x
+VERSION="1.4.7"
+VERSION_PLAYSMS=master
 VERSION_PHP=7.4
 VERSION_XDEBUG=3.0.4
 STORE_ROOT="./.docker"
