--- a/docker-compose.override.yaml
+++ b/docker-compose.override.yaml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   mysql:
-    image: mysql:5.7
+    image: docker.io/mysql:5.7
     container_name: mysql
     hostname: mysql
     restart: unless-stopped
